# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  json.cast  plain.cast  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  python-app.yml
gendiff/: __init__.py  cli.py  compare_data.py  diff.py  json_utils.py  path_data.py  stylish.py
gendiff/format/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_diff.py  test_json.py  test_plain.py
tests/test_data/: example_json.txt
